--- a/index.html
+++ b/index.html
@@ -377,6 +377,67 @@
         </tr>
       </tbody>
     </table>
+    <h2>Button Properties</h2>
+    
+    <table>
+        <thead>
+            <tr>
+                <th>Name/Attribute</th>
+                <th>Description</th>
+                <th>Example in CSS</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><code>type</code></td>
+                <td>Specifies the type of button (e.g., "button", "submit", "reset")</td>
+                <td><code>type="button"</code></td>
+            </tr>
+            <tr>
+                <td><code>disabled</code></td>
+                <td>Specifies that the button should be disabled</td>
+                <td><code>disabled</code></td>
+            </tr>
+            <tr>
+                <td><code>name</code></td>
+                <td>Specifies the name of the button</td>
+                <td><code>name="myButton"</code></td>
+            </tr>
+            <tr>
+                <td><code>value</code></td>
+                <td>Specifies the initial value of the button</td>
+                <td><code>value="Click me"</code></td>
+            </tr>
+            <tr>
+                <td><code>onclick</code></td>
+                <td>Specifies the JavaScript code to run when the button is clicked</td>
+                <td><code>onclick="myFunction()"</code></td>
+            </tr>
+            <tr>
+                <td><code>style</code></td>
+                <td>Specifies an inline CSS style for the button</td>
+                <td><code>style="background-color: blue; color: white;"</code></td>
+            </tr>
+            <tr>
+                <td><code>:hover</code></td>
+                <td>Selects button on mouse over</td>
+                <td><code>.button-example:hover</code></td>
+            </tr>
+            <tr>
+                <td><code>:active</code></td>
+                <td>Selects button on mouse click</td>
+                <td><code>.button-example:active</code></td>
+            </tr>
+            <tr>
+                <td><code>:focus</code></td>
+                <td>Selects button when focused (e.g., by keyboard navigation)</td>
+                <td><code>.button-example:focus</code></td>
+            </tr>
+        </tbody>
+    </table>
+    
+    <button class="button-example" type="button" onclick="alert('Button clicked!')">Click me</button>
+
 
 
 
